chore: Update streamlit dependency to version >=1.35.0,<1.36

--- a/pixi.toml
+++ b/pixi.toml
@@ -11,6 +11,7 @@ conv = 'python .\app\main.py'
 
 [dependencies]
 python = "3.11.*"
+streamlit = ">=1.35.0,<1.36"
 
 [pypi-dependencies]
 py360convert = "*"
